--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,7 +7,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          go-version: "1.19.0-rc.2"
+          go-version: "1.19.0"
           check-latest: true
           cache: true
           cache-dependency-path: go.sum
